refactor(db): optimize Lucene index refresh and improve timeout handling
- Use Primary Key (PK) and content hash strategy for incremental index refresh, reducing load and improving performance.
- Implement additional test cases for Lucene index refresh to ensure timeout guards work during row iteration.
- Remove unnecessary config parameters and improve code readability.